--- a/HospitalSystem/HospitalSystem/systemapp/templates/password_check.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/password_check.html
@@ -14,7 +14,7 @@
         </ul>
         {% endif %}
         {% endwith %}
-<form action="/personal_information/check_password" method="POST">
+<form action="" method="POST">
     <label>Please enter your old password:</label>
     <input type="password" name="password">
     <br><br>
