Modified some bugs in staff check pets and staff login

--- a/HospitalSystem/HospitalSystem/systemapp/templates/nav.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/nav.html
@@ -125,7 +125,7 @@
           <div class="about-widget">
             <div class="footer-logo">
               <figure>
-                <a href="index.html">
+                <a href="{{ url_for('index') }}">
                   <img src="../static/images/index_img/logo_index.png" alt="" width="70%" height="70%">
                 </a>
               </figure>
