change 'myaccount' to 'login', add sort label on staff check pets

--- a/HospitalSystem/HospitalSystem/systemapp/templates/nav.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/nav.html
@@ -60,7 +60,7 @@
                         </li>
                   </ul>
                   <div class="link-btn">
-                        <a href="{{ url_for('customer_login')}}" class="btn-style-one" data-locale="My Account"></a>
+                        <a href="{{ url_for('customer_login')}}" class="btn-style-one" data-locale="Login"></a>
                   </div>
             </div>
       </div>
